APP_KEY env variable added to gh action env

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -50,7 +50,7 @@ jobs:
     - name: Install front-end dependencies
       run: |
         npm install
-        npm run dev
+        npm run build
       
     - name: Run Testsuite
       run: vendor/bin/phpunit tests/
