--- a/.env.gh
+++ b/.env.gh
@@ -1,3 +1,5 @@
+APP_KEY=
+
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
@@ -13,3 +15,5 @@ SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
+
+LARAVEL_BYPASS_ENV_CHECK=1
