--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "a11y-slider": "^0.4.22",
+        "react-slick": "^0.29.0",
         "sass": "^1.63.6",
         "svg4everybody": "^2.1.9"
     }
