--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@emoji-mart/data": "^1.1.2",
+        "@emoji-mart/react": "^1.1.1",
         "a11y-slider": "^0.4.22",
+        "emoji-mart": "^5.5.2",
+        "react-overlays": "^5.2.1",
         "react-slick": "^0.29.0",
         "sass": "^1.63.6",
         "svg4everybody": "^2.1.9"
